updated design and minor changes

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <section>
-        <h1>about me</h1>
+        <h1>ABOUT ME</h1>
         <div class="subtitle">my journery to now</div>
         <img id="nico_wizard" src="nico_wizard.JPG" alt="">
         <div id="about_me">
