--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section>
-        <h1>get in touch</h1>
+        <h1>GET IN TOUCH</h1>
         <div class="subtitle">
             email me: <a href="mailto:domenico.martinucci@gmail.com">domenico.martinucci@gmail.com</a>, or fill out 
             the form below... (it doesn't work right now)
