--- a/home.html
+++ b/home.html
@@ -17,6 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -29,7 +31,7 @@
         </nav>
     </header>
     <section>
-        <h1>nico martinucci</h1>
+        <h1>NICO MARTINUCCI</h1>
         <div class="subtitle">former urban planner and <b>aspiring</b> software engineer</div>
         <div id="home_content">
             <div class="container">
