--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section>
-        <h1>projects</h1>
+        <h1>PROJECTS</h1>
         <div class="subtitle">coming soon...</div>
         
     </section>
