--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <section>
-        <h1>resume</h1>
+        <h1>RESUME</h1>
         <div class="subtitle">what i've accomplished</div>
         <div id="resume_jump">
             <p>jump to:
