add projects to project page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
     <section>
         <h1>ABOUT ME</h1>
         <div class="subtitle">my journery to now</div>
-        <img id="nico_wizard" src="nico_wizard.JPG" alt="">
+        <img id="nico_wizard" src="nico.JPG" alt="">
         <div id="about_me">
             <p>originally from berkeley, ca, i found my way to seattle, wa in 2008 to attend the university of
                 washington. after learning about the world of urban planning my senior year of high school and a chance
