--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,8 +23,27 @@
     </header>
     <section>
         <h1>PROJECTS</h1>
-        <div class="subtitle">coming soon...</div>
-        
+        <div class="subtitle">click links below to see my work</div>
+        <div id="projects">
+            <div class="project" id="meme-generator">
+                <a href="https://nico-martinucci.github.io/meme_generator/" target="_blank"><img src="meme_generator_image.jpg" alt=""></a>
+                <div class="caption">
+                    <h2><a href="https://nico-martinucci.github.io/meme_generator/" target="_blank">meme generator</a></h2>
+                    <p>this light-weight meme generator allows for fully-customizable pictures, text, and text colors, 
+                        along with a few fun built-in fonts.
+                    </p>    
+                </div>
+            </div>
+            <div class="project" id="memory-game">
+                <a href="https://nico-martinucci.github.io/memory_game/" target="_blank"><img src="memory_game_image.jpg" alt=""></a>
+                <div class="caption">
+                    <h2><a href="https://nico-martinucci.github.io/memory_game/" target="_blank">memory game</a></h2>
+                    <p>a fun memory game, complete with dynamic board sizes, beautiful colors,
+                        and a (locally-stored) high score tracker.
+                    </p>    
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <a href="https://www.linkedin.com/in/nico-martinucci-2a989448/" target="_blank"><img class="social_icon" src="linked_in.png" alt=""></a>
